Fixed bug #52496 (Zero exit code on option parsing failure).